--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
   - 12.14.1
-cache: npm
+cache:
+  directories:
+    - node_modules
 
 
 install:
@@ -12,6 +14,9 @@ script:
   - npm run build
 
 deploy:
-  provide: pages
-  skip-clean: true
-  github-token: $GITHUB_TOKEN
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: build
+  on:
+    branch: master
